# basingse

./: .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.md  hatch_build.py  jest.config.js  justfile  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  tsconfig.json  watch.py  webpack.config.js
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  pypi-package.yml  tests.yml
docs/: conf.py
extras/pytest-basingse/: README.md  pyproject.toml
extras/pytest-basingse/src/pytest_basingse/: __init__.py  app.py  logging.py  plugin.py  responses.py  templates.py
requirements/: base.in  base.txt  dev.in  dev.txt  docs.txt  tests.txt  typing.in  typing.txt
scripts/: check-dist.py
src/basingse/: __init__.py  app.py  assets.py  autoimport.py  forms.py  htmx.py  logging.py  manager.py  markdown.py  models.py  settings.py  svcs.py  views.py
src/basingse/admin/: __init__.py  extension.py  forms.py  nav.py  portal.py  settings.py  views.py
src/basingse/admin/table/: base.py  columns.py
src/basingse/admin/templates/admin/: _form.html  _sidebar.html  bad_request.html  base.html  dashboard.html  home.html  not_found.html  table.html  validation_error.html
src/basingse/admin/templates/admin/base/: edit.html  list.html
src/basingse/assets/: .gitignore  main.0cb5f405a7614971434b.js  main.0cb5f405a7614971434b.js.map  manifest.json
src/basingse/assets/css/: main.8b5ad7f66115699d8cba.css  main.8b5ad7f66115699d8cba.css.map  main.ae1b25dceb3856533dfd.css  main.ae1b25dceb3856533dfd.css.map  main.e2c0087464bfdb0237c5.css  main.e2c0087464bfdb0237c5.css.map
src/basingse/assets/js/: admin.3d85cdac7d30d71505f7.js  admin.3d85cdac7d30d71505f7.js.map  admin.42759e9b5db95c1c5618.js  admin.42759e9b5db95c1c5618.js.map  admin.6c2dbde8eb216cf52654.js  admin.6c2dbde8eb216cf52654.js.map  admin.f3d382f12fd47935a402.js  admin.f3d382f12fd47935a402.js.map  debug.151d7ec472fcee755fae.js  debug.151d7ec472fcee755fae.js.map  debug.58edcc31ecd8ec74312c.js  debug.58edcc31ecd8ec74312c.js.map  debug.7350a662fe7a8ac49ef0.js  debug.7350a662fe7a8ac49ef0.js.map  main.74edc2e3df5eef81254c.js  main.74edc2e3df5eef81254c.js.map  main.774c0ff760a1147a54b8.js  main.774c0ff760a1147a54b8.js.map  main.e33e4922d96a84c2e816.js  main.e33e4922d96a84c2e816.js.map
src/basingse/attachments/: __init__.py  admin.py  forms.py  views.py
src/basingse/auth/: admin.py  cli.py  extension.py  forms.py  manager.py  models.py  permissions.py  testing.py  utils.py  views.py
src/basingse/config/: defaults.py
src/basingse/customize/: cli.py  models.py  services.py  settings.py  views.py
src/basingse/customize/admin/: forms.py  views.py
src/basingse/models/: __init__.py  authentication.py  authorization.py  base.py  info.py  orm.py  paginate.py  permissions.py  schema.py  types.py  user.py
src/basingse/nav/: bar.py  bootstrap.py  elements.py  icons.py
src/basingse/opentelemetry/: settings.py
src/basingse/page/: admin.py  extension.py  forms.py  settings.py  views.py
src/basingse/page/models/: __init__.py  blocks.py  page.py
src/basingse/page/templates/: page.html
src/basingse/page/templates/blocks/: container.html  markdown.html  paragraph.html
src/basingse/publish/: mixin.py
src/basingse/resources/: settings.py
src/basingse/static/icons/: bootstrap-icons.scss
src/basingse/static/js/: htmx.json-enc.js  htmx.sortable.js  init.js
src/basingse/templates/: _colormode.html  _devbar.html  _icon.html  _lock.html  base.html  core.html  not_found.html  server_error.html
src/basingse/templates/bootstrap/: _form.html
src/basingse/testing/: responses.py
src/basingse/utils/: tags.py
src/frontend/: csrf.ts  editor.ts  htmx.ts  main.ts
src/frontend/scss/: admin.scss  bootstrap.scss  devbar.scss  styles.scss
src/frontend/ts/: admin.ts  bootstrap.ts  csrf.ts  debug.ts  editor.ts  htmx.ts  icon.ts  main.ts  theme.ts
src/frontend/ts/admin/: listfield.ts
src/frontend/ts/blocks/: blockquote.ts  rule.ts
src/frontend/tstypes/@editorjs/: image.d.ts  paragraph.d.ts
src/tstypes/@editorjs/: header.d.ts
tests/: __init__.py  conftest.py  roles.yml  test_autoimport.py  test_basingse.py  test_core.py  test_htmx.py  test_logging.py  test_markdown.py  test_permissions.py
tests/admin/: conftest.py  test_admin_views.py  test_form_helper.py  test_forms.py  test_import.py  test_portal.py  test_views.py
tests/admin/data/: post-scalar.yml  post.yml
tests/assets/: manifest.json  test.bundled.js  test_assets.py
tests/attachments/: test_admin.py
tests/auth/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_extension.py  test_permissions.py  test_user_edit.py  test_utils.py
tests/auth/templates/: base.html
tests/auth/templates/auth/: user_edit.html
tests/customize/: test_admin.py  test_cli.py  test_site_settings.py  test_views.py
tests/data/: attachment.txt
tests/frontend/: basic.test.ts
tests/page/: test_admin.py  test_views.py
tests/templates/: base.html  core.html
tests/templates/admin/: attachment.html
tests/utils/: test_url_helpers.py
(+13 files in other folders)
