[metadata]
name = basingse
version = attr: basingse.__version__
author = Alex Rudy
author_email = opensource@alexrudy.net
description = Opinionated Authentication for Flask Apps
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = BSD license,
url = https://github.com/alexrudy/basingse

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.11
install_requires = 
    Flask-BCrypt
    Flask-Login
    Flask-WTF
    Flask!=3.0.1,>=2
    flask-attachments @ git+https://github.com/alexrudy/flask-attachments.git@main
    itsdangerous
    marshmallow
    markdown-it-py[plugins]
    pytz
    SQLAlchemy>=1.4
    structlog
    svcs
    wtforms[email]
    wtforms-sqlalchemy


[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings = 
    error
addopts = 
    --cov=basingse
    -v
log_level = NOTSET

[coverage:run]
branch = True
source = 
    src/basingse
    tests/

[coverage:paths]
source = 
    src
    */site-packages

[coverage:report]
exclude_lines = 
    pragma: nocover
    raise AssertionError
    raise NotImplementedError
    if 0:
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    except BaseException:

[flake8]
select = B, E, F, W, B9, ISC
ignore = 
    E203
    E402
    E501
    E704
    E722
    W503
    W504
    E712,E711
    B902
max-line-length = 120
min_python_version = 3.11

[mypy]
files = src/basingse
plugins = sqlalchemy.ext.mypy.plugin
python_version = 3.11
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = False
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-flask_login.*]
ignore_missing_imports = True

[mypy-wtforms.*]
ignore_missing_imports = True

[mypy-wtforms_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_bcrypt]
ignore_missing_imports = True

[mypy-flask_wtf.*]
ignore_missing_imports = True

[bumpversion:file:src/flask_request_guid/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1
