[metadata]
name = basingse
version = attr: basingse.__version__
author = Alex Rudy
author_email = opensource@alexrudy.net
description = Opinionated Authentication for Flask Apps
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
license = BSD license,
url = https://github.com/alexrudy/basingse

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.11
install_requires = file: requirements/base.txt


[options.packages.find]
where = src

[bumpversion:file:src/basingse/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:package.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",


[bdist_wheel]
universal = 1
